# octofly

./: .coveragerc  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.py  orchestrate.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-test.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/aggregated_data/: aeroports.gzip  compagnies.gzip  prix_fuel.gzip  vols.gzip
data/extracted/test_data/: vols.gzip
data/predictions/: predictions_classification.gzip  predictions_regression.gzip
data/processed/train_data/: train.gzip  train_target.gzip
data/raw/: fuel.parquet
docs/: Description des tables OCTOFLY.xlsx  Makefile  conf.py  index.rst  make.bat
models/: model_classification.sav  model_regression.sav
notebooks/: Metrics&KPIs_copy.ipynb  OCTOFLY-Train.ipynb  OCTOFLY.ipynb
src/app_visualization/: app.py  prediction_with_cost_kpi.csv
src/data/: aggregate_data.py  extract_files_from_database.py  make_dataset.py
src/features/: build_features.py  feature_engineering.py
src/models/: predict_classification_model.py  predict_model.py  predict_regression_model.py  train_classification_model.py  train_model.py  train_regression_model.py
src/models/catboost_info/: learn_error.tsv  (+2 more)
src/visualization/: app.py
tests/: test_feature_engineering.py
tests/app_visualization/: test_metrics_and_KPIs.py
tests/data/: test_aggregate_data.py
tests/features/: test_feature_engineering.py
tests/models/: test_predict_classification_model.py
(+20 files in other folders)
