[tool.poetry]
name = "src"
version = "0.1.0"
description = "\"machine learning applied to airline delay\""
authors = ["Lea Nacccache <lea.naccache@octo.com>, Taha Yassine Ben Ali <baty@octo.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
behave = "^1.2.6"
flake8 = "^3.9.2"
mypy = "^0.812"
pre-commit = "^2.12.1"
pandas = "^1.2.4"
sklearn = "^0.0"
scikit-learn = "^0.24.2"
pyarrow = "^4.0.0"
fastparquet = "^0.6.3"
pdoc = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
