[tool.poetry]
name = "src"
version = "0.1.0"
description = "\"machine learning applied to airline delay\""
authors = ["Lea Nacccache <lea.naccache@octo.com>, Taha Yassine Ben Ali <baty@octo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
codecov = "^2.1.11"
prefect = "^0.14.21"
lightgbm = "^3.2.1"
catboost = "^0.26"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
behave = "^1.2.6"
flake8 = "^3.9.2"
mypy = "^0.812"
pre-commit = "^2.12.1"
pandas = "^1.2.4"
sklearn = "^0.0"
scikit-learn = "^0.24.2"
pyarrow = "^4.0.0"
fastparquet = "^0.6.3"
pdoc = "^7.0.0"
pytest-sugar = "^0.9.4"
streamlit = "^0.82.0"
awesome-streamlit = "^20200728.1"
plotly = "^4.14.3"
jupyter = "^1.0.0"
pandas-profiling = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"